# qbe-assignment

./: .pre-commit-config.yaml  README.md  app.py  data.csv  pyproject.toml  qbe_app.py
.github/workflows/: pre-commit.yaml
tests/: conftest.py  test_app.py  test_qbe_app.py
