[tool.poetry]
name = "qbe-assignment"
version = "0.1.0"
description = "Packages for take home assignment"
authors = ["thekjarthur <kkarthur@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pandas = "^2.2.2"
pytest = "^8.2.1"
requests = "^2.32.2"
pre-commit = "^3.7.1"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
